--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,39 +1,23 @@
-<section class="auth">
-    <div class="auth-container">
-        <div class="card">
-            <header class="auth-header">
-                <h1 class="auth-title">
-                    <div class="logo">
-                        <span class="l l1"></span>
-                        <span class="l l2"></span>
-                        <span class="l l3"></span>
-                        <span class="l l4"></span>
-                        <span class="l l5"></span>
-                    </div>
-                    Домашняя бухгалтерия
-                </h1>
-            </header>
-            <div class="auth-content">
-                <p class="text-xs-center">Войдите для работы</p>
-                <form>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="text" class="form-control underlined" id="email" placeholder="Введите ваш email">
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Пароль</label>
-                        <input type="password" class="form-control underlined" id="password" placeholder="Пароль">
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-block btn-primary">Войти</button>
-                    </div>
-                    <div class="form-group">
-                        <p class="text-muted text-xs-center">
-                            Нет аккаунта? <a href="#">Зарегистрироваться!</a>
-                        </p>
-                    </div>
-                </form>
-            </div>
+<section class="login">
+    <div class="login__card">
+        <header class="login-card__header">
+            <span class="login-card__logo">Логотип</span>
+            <h1 class="login-card__title">
+                Домашняя бухгалтерия
+            </h1>
+        </header>
+        <div class="login-card__content">
+            <p class="login-card__text">Войдите для работы</p>
+            <form>
+                <label for="email">Email</label>
+                <input type="text" class="login-card__input" id="email" placeholder="Введите ваш email">
+                <label for="password">Пароль</label>
+                <input type="password" class="login-card__input" id="password" placeholder="Пароль">
+                <button type="submit" class="login-card__btn">Войти</button>
+                <p class="login-card__text">
+                    Нет аккаунта? <a class="login-card__link" href="#">Зарегистрироваться!</a>
+                </p>
+            </form>
         </div>
     </div>
 </section>
