--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,13 @@
-<p>auth works!</p>
+<section class="auth">
+    <div class="auth__card">
+        <header class="auth-card__header">
+            <span class="auth-card__logo">Логотип</span>
+            <h1 class="auth-card__title">
+                Домашняя бухгалтерия
+            </h1>
+        </header>
+        <div class="auth-card__content">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</section>
