--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,23 +1,13 @@
-<section class="login">
-    <div class="login__card">
-        <header class="login-card__header">
-            <span class="login-card__logo">Логотип</span>
-            <h1 class="login-card__title">
-                Домашняя бухгалтерия
-            </h1>
-        </header>
-        <div class="login-card__content">
-            <p class="login-card__text">Войдите для работы</p>
-            <form>
-                <label for="email">Email</label>
-                <input type="text" class="login-card__input" id="email" placeholder="Введите ваш email">
-                <label for="password">Пароль</label>
-                <input type="password" class="login-card__input" id="password" placeholder="Пароль">
-                <button type="submit" class="login-card__btn">Войти</button>
-                <p class="login-card__text">
-                    Нет аккаунта? <a class="login-card__link" href="#">Зарегистрироваться!</a>
-                </p>
-            </form>
-        </div>
-    </div>
+<section class="login-card__content">
+    <p class="login-card__text">Войдите для работы</p>
+    <form>
+        <label for="email">Email</label>
+        <input type="text" class="login-card__input" id="email" placeholder="Введите ваш email">
+        <label for="password">Пароль</label>
+        <input type="password" class="login-card__input" id="password" placeholder="Пароль">
+        <button type="submit" class="login-card__btn">Войти</button>
+        <p class="login-card__text">
+            Нет аккаунта? <a class="login-card__link" href="#">Зарегистрироваться!</a>
+        </p>
+    </form>
 </section>
