--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<section class="login-card__content">
+<section class="login-card">
     <p class="login-card__text">Войдите для работы</p>
     <form>
         <label for="email">Email</label>
