--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -1,1 +1,22 @@
+// media
+$width-mobile: '(max-width: 767px)';
+$width-tablet: '(min-width: 768px)';
+$width-tablet-only: '(min-width: 768px) and (max-width: 1189px)';
+$width-desktop: '(min-width: 1190px)';
+$width-desktop-external: '(min-width: 1218px)';
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
+//colors
 $color_grey: #4f5f6f;
+// fonts
+$font-system: -apple-system,
+BlinkMacSystemFont,
+'Segoe UI',
+Roboto,
+Helvetica,
+Arial,
+sans-serif;
+$open-sans: 'Open Sans',
+$font-system;
+$monserat: 'Montserrat',
+$font-system;
