--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '/src/assets/style/_variables';
+@import '/src/assets/style/_mixins';
+@import '/src/assets/style/_visually-hidden';
+* {
+    box-sizing: border-box;
+    font-size: 15px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+}
