add styles for login component

--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -8,6 +8,7 @@ $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
 //colors
 $color_grey: #4f5f6f;
+$color_grey2: #ccc;
 // fonts
 $font-system: -apple-system,
 BlinkMacSystemFont,
