--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,6 +1,18 @@
-@import '../../../assets/style/_variables';
+@import '../../../assets/style/_variables.scss';
+@import '../../../assets/style/common/inputs';
 .login-card {
+    display: block;
+    width: 100%;
+    height: 100%;
     &__text {
+        font-family: $open-sans;
+        font-size: 15px;
+        color: $color_grey;
+        text-align: center;
+    }
+    &__label {
+        display: block;
+        font-weight: 700;
         color: $color_grey;
     }
 }
