--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -9,6 +9,8 @@ $retina-dppx: 1.5dppx;
 //colors
 $color_grey: #4f5f6f;
 $color_grey2: #ccc;
+$color-blue: #31a7c1;
+$color-white: #fff;
 // fonts
 $font-system: -apple-system,
 BlinkMacSystemFont,
