--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -27,4 +27,8 @@
         color: $color-white;
         background-color: $color-blue;
     }
+    &__link {
+        text-decoration: none;
+        color: $color-blue;
+    }
 }
