add some markup and styles

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
         <input type="password" class="login-card__input inputs" id="password" placeholder="Пароль" formControlName="password">
         <button type="submit" class="login-card__btn">Войти</button>
         <p class="login-card__text">
-            Нет аккаунта? <a class="login-card__link" href="#">Зарегистрироваться!</a>
+            Нет аккаунта? <br/> <a class="login-card__link" href="#">Зарегистрироваться!</a>
         </p>
     </form>
 </section>
