--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,12 +1,12 @@
 <section class="auth">
     <div class="auth__card">
-        <header class="auth-card__header">
-            <span class="auth-card__logo">Логотип</span>
-            <h1 class="auth-card__title">
+        <header class="auth__card-header">
+            <img class="auth__card-logo" src="../../assets/img/logo.svg" width="100" heigh="100" alt="Логотип Домашней бухгалтерии">
+            <h1 class="auth__card-title">
                 Домашняя бухгалтерия
             </h1>
         </header>
-        <div class="auth-card__content">
+        <div class="auth__card-content">
             <router-outlet></router-outlet>
         </div>
     </div>
