--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -4,6 +4,13 @@
     display: block;
     width: 100%;
     height: 100%;
+    padding: 30px 25px;
+    background-color: $color_white;
+    @media ($width-tablet) {
+        width: 450px;
+        min-height: 364px;
+        padding: 30px 50px;
+    }
     &__text {
         font-family: $open-sans;
         font-size: 15px;
