--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -9,9 +9,9 @@ $retina-dppx: 1.5dppx;
 //colors
 $color_grey: #4f5f6f;
 $color_grey2: #ccc;
-$color-grey3: #667380;
-$color-blue: #31a7c1;
-$color-white: #fff;
+$color_grey3: #667380;
+$color_blue: #31a7c1;
+$color_white: #fff;
 // fonts
 $font-system: -apple-system,
 BlinkMacSystemFont,
