--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import '../src/assets/style/common/normalize';
 @import '../src/assets/style/_variables';
 @import '../src/assets/style/_mixins';
 @import '../src/assets/style/_visually-hidden';
