--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -10,6 +10,7 @@ $retina-dppx: 1.5dppx;
 $color_grey: #4f5f6f;
 $color_grey2: #ccc;
 $color_grey3: #667380;
+$color_grey4: #97a4b1;
 $color_blue: #31a7c1;
 $color_white: #fff;
 // fonts
