--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -19,14 +19,19 @@
     }
     &__label {
         display: block;
+        margin-bottom: 10px;
         font-weight: 700;
         color: $color_grey;
+    }
+    &__input {
+        margin-bottom: 10px;
     }
     &__btn {
         @include btn-reset();
         display: inline-block;
-        width: 270px;
+        width: 100%;
         height: 38px;
+        margin: 15px auto;
         font-weight: 400;
         text-align: center;
         line-height: 15px;
