add styles for errors in validation

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,8 +1,28 @@
 @import '../../../assets/style/_variables.scss';
 @import '../../../assets/style/common/inputs';
+@keyframes errorInput {
+    from,
+    to {
+        transform: translate3d(0, 0, 0);
+    }
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        transform: translate3d(-10px, 0, 0);
+    }
+    20%,
+    40%,
+    60%,
+    80% {
+        transform: translate3d(10px, 0, 0);
+    }
+}
+
 .login-card {
     display: block;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     padding: 30px 25px;
     background-color: $color_white;
@@ -12,10 +32,14 @@
         padding: 30px 50px;
     }
     &__text {
+        margin: 0;
         font-family: $open-sans;
         font-size: 15px;
         color: $color_grey;
         text-align: center;
+    }
+    &__wrapper {
+        min-height: 80px;
     }
     &__label {
         display: block;
@@ -24,7 +48,17 @@
         color: $color_grey;
     }
     &__input {
-        margin-bottom: 10px;
+        &--error {
+            position: relative;
+            border-bottom: 2px solid $color_red;
+            animation: errorInput 1s;
+        }
+    }
+    &__error {
+        position: relative;
+        top: -3px;
+        font-size: 10px;
+        color: $color_red;
     }
     &__btn {
         @include btn-reset();
