add some common styles

--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -13,6 +13,7 @@ $color_grey3: #667380;
 $color_grey4: #97a4b1;
 $color_blue: #31a7c1;
 $color_white: #fff;
+$color_red: #fc7b7b;
 // fonts
 $font-system: -apple-system,
 BlinkMacSystemFont,
