--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -1,30 +1,30 @@
 <section class="registration">
     <p class="registration__text">Регистрация для получения доступа</p>
     <form>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" class="form-control underlined" id="email" placeholder="Введите email">
+        <div class="registration__wrapper">
+            <label class="registration__label" for="email">Email</label>
+            <input type="email" class="inputs registration__input" id="email" placeholder="Введите email">
         </div>
-        <div class="form-group has-error">
-            <label for="password">Пароль</label>
-            <input type="password" class="form-control underlined" id="password" placeholder="Введите пароль">
-            <span class="form-help-text">Error message.</span>
+        <div class="registration__wrapper has-error">
+            <label class="registration__label" for="password">Пароль</label>
+            <input type="password" class="inputs registration__input" id="password" placeholder="Введите пароль">
+            <span class="registration__error">Error message.</span>
         </div>
-        <div class="form-group has-success">
-            <label for="name">Имя</label>
-            <input type="text" class="form-control underlined" id="name" placeholder="Введите имя">
-            <span class="form-help-text">Success message.</span>
+        <div class="registration__wrapper">
+            <label class="registration__label" for="name">Имя</label>
+            <input type="text" class="inputs registration__input" id="name" placeholder="Введите имя">
+            <span class="registration__success">Success message.</span>
         </div>
-        <div class="form-group">
-            <label for="agree">
-                            <input class="checkbox" id="agree" type="checkbox">
-                            <span>Согласен с правилами</span>
-                        </label>
+        <div class="registration__wrapper">
+            <label class="registration__label" for="agree">
+                <input class="registration__checkbox" id="agree" type="checkbox">
+                <span class="registration__text">Согласен с правилами</span>
+            </label>
         </div>
-        <div class="form-group">
+        <div class="registration__wrapper">
             <button type="submit" class="btn btn-block btn-primary">Зарегистрироваться</button>
         </div>
-        <div class="form-group">
+        <div class="registration__wrapper">
             <p class="text-muted text-xs-center">
                 Уже есть аккаунт?
                 <a href="#">
