adds style for disabled button

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -72,6 +72,10 @@
         vertical-align: middle;
         color: $color-white;
         background-color: $color-blue;
+        &--grey {
+            color: $color_grey3;
+            background-color: $color_grey2;
+        }
     }
     &__link {
         text-decoration: none;
