adds message's model and uses it - but there is error 🐷 (cant fix it for now)

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,9 +1,9 @@
 <section class="login-card">
     <p class="login-card__text">Войдите для работы</p>
+    <div class="login-card__{{message.type}}" *ngIf="message">
+        <p class="login-card__error-text"> {{message.text}} </p>
+    </div>
     <form class="login-card__form" [formGroup]="form" (ngSubmit)="onSubmit()">
-        <div class="">
-
-        </div>
         <div class="login-card__wrapper">
             <label class="login-card__label" for="email">Email</label>
             <input type="email" [ngClass]="{'login-card__input--error' : form.get('email').invalid && form.get('email').touched}" class="login-card__input inputs" id="email" placeholder="Введите ваш email" formControlName="email">
