changes the link redirecting to registration

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -26,7 +26,7 @@
             Войти
         </button>
         <p class="login-card__text">
-            Нет аккаунта? <br/> <a class="login-card__link" href="#">Зарегистрироваться!</a>
+            Нет аккаунта? <br/> <a class="login-card__link" [routerLink]="'/registration'">Зарегистрироваться!</a>
         </p>
     </form>
 </section>
