--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -1,22 +1,22 @@
 <section class="registration">
     <p class="registration__text">Регистрация для получения доступа</p>
-    <form class="registration__form">
+    <form class="registration__form" [formGroup]="form" (ngSubmit)="onSubmit()">
         <div class="registration__wrapper">
             <label class="registration__label" for="email">Email</label>
-            <input type="email" class="inputs registration__input" id="email" placeholder="Введите email">
+            <input type="email" class="inputs registration__input" id="email" placeholder="Введите email" formControlName="email">
         </div>
         <div class="registration__wrapper">
             <label class="registration__label" for="password">Пароль</label>
-            <input type="password" class="inputs registration__input" id="password" placeholder="Введите пароль">
+            <input type="password" class="inputs registration__input" id="password" placeholder="Введите пароль" formControlName="password">
             <span class="registration__error">Error message.</span>
         </div>
         <div class="registration__wrapper">
             <label class="registration__label" for="name">Имя</label>
-            <input type="text" class="inputs registration__input" id="name" placeholder="Введите имя">
+            <input type="text" class="inputs registration__input" id="name" placeholder="Введите имя" formControlName="name">
             <span class="registration__success">Success message.</span>
         </div>
         <div class="registration__wrapper registration__wrapper--agree">
-            <input class="registration__checkbox" id="agree" type="checkbox">
+            <input class="registration__checkbox" id="agree" type="checkbox" formControlName="agree">
             <label class="registration__label registration__label--lock" for="agree">
                 <svg width="26" height="30" viewBox="0 0 36 40"><path class="lockb" d="M27 27C27 34.1797 21.1797 40 14 40C6.8203 40 1 34.1797 1 27C1 19.8203 6.8203 14 14 14C21.1797 14 27 19.8203 27 27ZM15.6298 26.5191C16.4544 25.9845 17 25.056 17 24C17 22.3431 15.6569 21 14 21C12.3431 21 11 22.3431 11 24C11 25.056 11.5456 25.9845 12.3702 26.5191L11 32H17L15.6298 26.5191Z"></path><path class="lock" d="M6 21V10C6 5.58172 9.58172 2 14 2V2C18.4183 2 22 5.58172 22 10V21"></path><path class="bling" d="M29 20L31 22"></path><path class="bling" d="M31.5 15H34.5"></path><path class="bling" d="M29 10L31 8"></path></svg>
             </label>
@@ -27,7 +27,7 @@
         </div>
         <p class="registration__text">
             Уже есть аккаунт?
-            <a class="registration__link" href="#">
+            <a class="registration__link" [routerLink]="'/login'">
                     Войти!
             </a>
         </p>
