--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -14,6 +14,7 @@ $color_grey4: #97a4b1;
 $color_blue: #31a7c1;
 $color_white: #fff;
 $color_red: #fc7b7b;
+$color_green: #5bcda6;
 // fonts
 $font-system: -apple-system,
 BlinkMacSystemFont,
