--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -3,20 +3,28 @@
     <form class="registration__form" [formGroup]="form" (ngSubmit)="onSubmit()">
         <div class="registration__wrapper">
             <label class="registration__label" for="email">Email</label>
-            <input type="email" class="inputs registration__input" id="email" placeholder="Введите email" formControlName="email">
-            <span *ngIf="form.get('email').touched && form.get('email').invalid" class="registration__message registration__message--error">Error message.</span>
+            <input [ngClass]="{'registration__input--error' : form.get('email').touched && form.get('email').invalid}" type="email" class="inputs registration__input" id="email" placeholder="Введите email" formControlName="email">
+            <span *ngIf="form.get('email').touched && form.get('email').invalid" class="registration__message registration__message--error">Необходимо ввести e-mail!</span>
         </div>
         <div class="registration__wrapper">
             <label class="registration__label" for="password">Пароль</label>
-            <input type="password" class="inputs registration__input" id="password" placeholder="Введите пароль" formControlName="password">
-            <span *ngIf="form.get('password').touched && form.get('password').valid" class="registration__message registration__message--success">Success message.</span>
-            <span *ngIf="form.get('password').touched && form.get('password').invalid" class="registration__message registration__message--error">Error message.</span>
+            <input [ngClass]="{'registration__input--error' : form.get('password').touched && form.get('password').invalid}" type="password" class="inputs registration__input" id="password" placeholder="Введите пароль" formControlName="password">
+            <span *ngIf="form.get('password').touched && form.get('password').valid" class="registration__message registration__message--success">Пароль корректной длины</span>
+            <div *ngIf="form.get('password').touched && form.get('password').invalid">
+                <span class="registration__message registration__message--error" *ngIf="form.get('password')['errors']['required']">Пароль не может быть пустым</span>
+                <span class="registration__message registration__message--error" *ngIf="form.get('password')['errors']['minlength']">
+                    Пароль должен быть не короче
+                    {{ form.get('password')['errors']['minlength']['requiredLength']}}
+                    символов! Сейчас введено
+                    {{form.get('password')['errors']['minlength']['actualLength']}}
+                </span>
+            </div>
         </div>
         <div class="registration__wrapper">
             <label class="registration__label" for="name">Имя</label>
-            <input type="text" class="inputs registration__input" id="name" placeholder="Введите имя" formControlName="name">
-            <span *ngIf="form.get('name').touched && form.get('name').valid" class="registration__message registration__message--success">Success message.</span>
-            <span *ngIf="form.get('name').touched && form.get('name').invalid" class="registration__message registration__message--error">Error message.</span>
+            <input [ngClass]="{'registration__input--error' : form.get('name').touched && form.get('name').invalid}" type="text" class="inputs registration__input" id="name" placeholder="Введите имя" formControlName="name">
+            <span *ngIf="form.get('name').touched && form.get('name').valid" class="registration__message registration__message--success">Корректное имя.</span>
+            <span *ngIf="form.get('name').touched && form.get('name').invalid" class="registration__message registration__message--error">Введите имя.</span>
         </div>
         <div class="registration__wrapper registration__wrapper--agree">
             <input class="registration__checkbox" id="agree" type="checkbox" formControlName="agree">
