deletes useless class and condition for 'disabled' button and adds same thing by right way

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -22,7 +22,7 @@
                 </span>
             </div>
         </div>
-        <button type="submit" class="login-card__btn" [disabled]="form.invalid" [ngClass]="{'login-card__btn--grey': form.invalid}">
+        <button type="submit" class="login-card__btn" [disabled]="form.invalid">
             Войти
         </button>
         <p class="login-card__text">
