--- a/src/app/auth/registration/registration.component.scss
+++ b/src/app/auth/registration/registration.component.scss
@@ -105,6 +105,10 @@
             color: $color_grey3;
             background-color: $color_grey2;
         }
+        &:disabled {
+            color: $color_grey3;
+            background-color: $color_grey2;
+        }
     }
     &__link {
         text-decoration: none;
