--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,9 +1,14 @@
 <section class="login-card">
     <p class="login-card__text">Войдите для работы</p>
     <form class="login-card__form" [formGroup]="form" (ngSubmit)="onSubmit()">
-        <div class="login-card__error">
+        <div class="login-card__message" [ngClass]="{
+                'login-card__message--success' : nowCanLogin,
+                'login-card__message--error' : !rightPassword,
+                'login-card__message--error' : !existingUser
+            }">
             <p class="login-card__error-text" *ngIf="!rightPassword"> Пароль не подходит! </p>
             <p class="login-card__error-text" *ngIf="!existingUser"> Такого пользователя не существует </p>
+            <p class="login-card__success-text" *ngIf="nowCanLogin"> Теперь Вы можете войти </p>
         </div>
         <div class="login-card__wrapper">
             <label class="login-card__label" for="email">Email</label>
