--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -6,15 +6,20 @@ $width-desktop: 'min-width: 1190px';
 $width-desktop-external: 'min-width: 1218px';
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
-//colors
+//colors by HEX
 $color_grey: #4f5f6f;
 $color_grey2: #ccc;
 $color_grey3: #667380;
 $color_grey4: #97a4b1;
+$color_grey5: #d7dde4;
 $color_blue: #31a7c1;
 $color_white: #fff;
 $color_red: #fc7b7b;
 $color_green: #5bcda6;
+//colors by components
+$header_color: $color_grey5;
+$header_text_color: $color_grey;
+$main_accent: $color_blue;
 // fonts
 $font-system: -apple-system,
 BlinkMacSystemFont,
