--- a/src/app/system/system.component.html
+++ b/src/app/system/system.component.html
@@ -1,1 +1,17 @@
-<p>system works!</p>
+<main class="system">
+    <header class="system__header">
+        <button class="system__header-menu" [ngClass]="{'system__header-menu--closed': isOpenMobileMenu}" aria-label="Кнопка открытия меню" (click)="toggleMobileMenu()"></button>
+        <a href="/">
+            <img class="auth__card-logo" src="../../assets/img/logo.svg" width="40" heigh="40" alt="Логотип Домашней бухгалтерии">
+        </a>
+        <button class="system__header-user" [ngClass]="{'system__header-user--closed': isOpenUserMenu}" aria-label="Кнопка открытия меню" (click)="toggleUserMenu()"></button>
+    </header>
+    <aside class="system__aside">
+        <ul class="system__aside-list">
+
+        </ul>
+    </aside>
+    <section class="system__section">
+        <router-outlet></router-outlet>
+    </section>
+</main>
