--- a/src/app/system/system.component.scss
+++ b/src/app/system/system.component.scss
@@ -4,8 +4,12 @@
 .system {
     display: block;
     width: 100vw;
-    height: 100%;
-    @media ($width-tablet) {}
+    height: 100vh;
+    @media ($width-desktop) {
+        display: grid;
+        grid-template-columns: 250px 1fr 1fr;
+        grid-template-rows: 70px 1fr;
+    }
     &__header {
         position: relative;
         display: flex;
@@ -15,6 +19,10 @@
         height: 50px;
         padding: 0 20px;
         background-color: $header_color;
+        @media ($width-desktop) {
+            grid-column: 2 / 3;
+            grid-row: 1 / 2;
+        }
     }
     &__header-menu {
         @include btn-reset();
@@ -54,6 +62,9 @@
             &:after {
                 display: none;
             }
+        }
+        @media ($width-desktop) {
+            display: none;
         }
     }
     &__header-user {
@@ -126,6 +137,10 @@
             transform: translateY(0);
             transition: transform 0.2s linear;
         }
+        @media ($width-desktop) {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+        }
     }
     &__aside-list {
         @include ul-reset;
@@ -137,6 +152,12 @@
         &:active,
         &:focus {
             background-color: darken($color: ($header_color), $amount: 10%)
+        }
+    }
+    &__section {
+        @media ($width-desktop) {
+            grid-column: 2 / 3;
+            grid-row: 2 / 3;
         }
     }
 }
