--- a/src/app/system/system.component.scss
+++ b/src/app/system/system.component.scss
@@ -138,8 +138,12 @@
             transition: transform 0.2s linear;
         }
         @media ($width-desktop) {
+            position: static;
             grid-column: 1 / 2;
             grid-row: 2 / 3;
+            width: 250px;
+            transform: none;
+            transition: none;
         }
     }
     &__aside-list {
